--- a/index.html
+++ b/index.html
@@ -109,11 +109,7 @@
 						<td>+91 82084 56990</td>
 					</tr>
 					<tr>
-						<th>Email(Work):</th>
-						<td>mail@raunaksingwi.me</td>
-					</tr>
-					<tr>
-						<th>Email(Personal):</th>
+						<th>Email:</th>
 						<td>raunaksingwi7@gmail.com</td>
 					</tr>
 				</table>
@@ -145,7 +141,7 @@
 		<!-- ABOUT ME -->
 		<div class="row">
 			<div class="col-xs-12">
-				<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. Apart from that, I love skateboarding and swimming. </p>
+				<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write some code and then see something happen on the computer is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my dessert. I also love skateboarding and swimming. </p>
 			</div>
 		</div>
 		<br><br><br>
@@ -172,7 +168,7 @@
 	        	<h4>Member of Technical Staff</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Currently working at VMware, Bangalore in the vCenterLifecycle team.</p>
+				<p>Currently working at VMware, Bangalore with the vCenterLifecycle team.</p>
 			</div>
 		</div>
 		<br><br>
@@ -183,7 +179,7 @@
 	        	<h4>R&D Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I have interned at VMware, Bangalore as a R&D intern in the vCenterLifecycle team. I have worked on the development of the 'vCenter External to Embedded Convergance Tool'.</p>
+				<p>I have interned at VMware, Bangalore as a R&D intern with the vCenterLifecycle team. I have worked on the development of the 'vCenter External to Embedded Convergance Tool'.</p>
 			</div>
 		</div>
 		<br><br>
@@ -194,7 +190,7 @@
 	        	<h4>Project Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Made my final year college project with Persistent Systems. Build a web application using Python's Django web development framework to answer queries related to my college. Keywords from user's query were matched to the query stored in the DB and the respective answer(s) from the DB were displayed to ther user.</p>
+				<p>Made my final year college project with Persistent Systems. Built a web application using Python's Django web development framework to answer FAQs about my college. Keywords from user's query were matched to the questions stored in the DB and the respective answer(s) were displayed to ther user.</p>
 			</div>
 		</div>
 		<br><br>
@@ -226,7 +222,7 @@
 	        	<h4>Bachelor of Engineerng in Information Techonlogy.</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. Apart from that, I had really good life experiences, met good people, made friends. I got to explore myself, participate in lots of extra curricular activities and had great fun. I went out as a confident, independent and skilled man.</p>
+				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. The best part was undoubtedly the hostel life. I had great life experiences, met nice people, made such true friends whom I can call at 3 in the night to tell about that lame dream I had ! I got to explore myself, participated in lots of extra curricular activities and had great fun. I came out as a confident, independent and skilled person.</p>
 			</div>
 		</div>
 
@@ -236,7 +232,7 @@
 	        	<h4>Engineering entrance coaching</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Living in a hostel, far from parents, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. This time tought me the importance of hard work.</p>
+				<p>Living far from parents for the first time in life, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. I fall behind the rase, I didn't study, I wasted the precious time, but learnt a lesson. This time tought me the importance of hard work.</p>
 			</div>
 		</div>
 
@@ -325,7 +321,7 @@
 				<p style="font-weight: bold;">RAILWAY TICKET BOOKING AUTOMATION</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</p>
+				<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where you need to be very fast to get a ticket, this automation can do the work for you much faster and give you an edge that will increase the chances of getting the taktal ticket.</p>
 			</div>
 		</div>
 		<br><br>
@@ -339,7 +335,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">PUBLIC SPEAKING & DEBATING</p>
+				<p style="font-weight: bold;">PUBLIC SPEAKING</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</p>
@@ -378,11 +374,11 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<ul class="list-unstyled">
-						<li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+						<li><span class="glyphicon glyphicon-pushpin"></span> 2nd Rank, National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
 		                <br>
-		                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+						<li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank, Inter-Collegiate Debate Competition, organized by Tirpude College of Management, Nagpur. February 3rd, 2017.</li>
 		                <br>
-		                <li><span class="glyphicon glyphicon-pushpin"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
+		                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank, Inter-Collegiate Extempore Competition, organized by Tirpude College of Management, Nagpur. February 3rd, 2017.</li>
 		                <br>
 		                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
 		                <br>
@@ -390,9 +386,9 @@
 		                <br>
 		                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
 		                <br>
-		                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
+		                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences, Nagpur. January 31st, 2017</li>
 		                <br>
-		                 <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
+		                 <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
 		                <br>
 		                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
 		                <br>
