--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	        	<h4>Bachelor of Engineerng in Information Techonlogy.</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. The best part was undoubtedly the hostel life. I had great life experiences, met nice people, made such true friends whom I can call at 3 in the night to tell about that lame dream I had ! I got to explore myself, participated in lots of extra curricular activities and had great fun. I came out as a confident, independent and skilled person.</p>
+				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. The best part was undoubtedly the hostel life. I had great life experiences, met nice people, made awesome friends, I got to explore myself, participated in lots of extra curricular activities and had great fun. I came out as a confident, independent and skilled person.</p>
 			</div>
 		</div>
 
@@ -232,7 +232,7 @@
 	        	<h4>Engineering entrance coaching</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Living far from parents for the first time in life, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. I fall behind the rase, I didn't study, I wasted the precious time, but learnt a lesson. This time tought me the importance of hard work.</p>
+				<p>Living far from parents for the first time in life, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. I fall behind the race, I didn't study, I wasted the precious time, but learnt a lesson. This time tought me the importance of hard work.</p>
 			</div>
 		</div>
 
