add postgres to skills

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 				<p style="font-weight: bold;">OTHERS</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Git, Perforce</p>
+				<p>Git, Perforce, PostgresDB</p>
 			</div>
 		</div>
 		<br>
@@ -303,7 +303,7 @@
 				<p style="font-weight: bold;">COLLEGE INQUIRY CHATBOT</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
+				<p>This is the project I did with persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
 			</div>
 		</div>
 		<br>
