--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 	        	<h4>Member of Technical Staff</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Currently working at VMware, Bangalore with the vCenterLifecycle team.</p>
+				<p>Working with the vCenterLifecycle team on the development of the ‘vCenter Server Converge tool’. Currently working on making the REST API for the tool integrated with VMware’s VMODL framework and
+make it available as vSphere API and also release in the form of public API. Responsible for the end to end development of the feature.</p>
 			</div>
 		</div>
 		<br><br>
@@ -179,7 +180,8 @@
 	        	<h4>R&D Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I have interned at VMware, Bangalore as a R&D intern with the vCenterLifecycle team. I have worked on the development of the 'vCenter External to Embedded Convergance Tool'.</p>
+				<p>Worked with the vCenterLifecycle team on the development of the ‘vCenter Server Converge tool’. Successfully delivered the CLI version of the tool with vSphere 6.7U1 release. Specifically, responsible for the research to make the tool work on load balancer setup.
+</p>
 			</div>
 		</div>
 		<br><br>
@@ -190,7 +192,7 @@
 	        	<h4>Project Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Made my final year college project with Persistent Systems. Built a web application using Python's Django web development framework to answer FAQs about my college. Keywords from user's query were matched to the questions stored in the DB and the respective answer(s) were displayed to ther user.</p>
+				<p>Built a web based chatbot to answer FAQs about colleges in Nagpur such as placements and admission related questions. Scraped the websites of these colleges to populate the database.</p>
 			</div>
 		</div>
 		<br><br>
@@ -201,7 +203,8 @@
 	        	<h4>Summer Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I have done a summer internship under the goverment's 'RGSTC-TIFAC-MSME internship program'. Worked on requirement gathering and making initial design for the monitoring and analysis of a machine. Did graph plotting for the data</p>
+				<p>Interned under the Government of India’s RGSTC-TIFAC-MSME internship program. Built a real-time monitoring system for mining machines to reduce the downtime.
+</p>
 			</div>
 		</div>
 		<br><br><br>
@@ -277,7 +280,7 @@
 				<p style="font-weight: bold;">WEB DEVELOPMENT</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>HTML, CSS, Bootstrap, Django.</p>
+				<p>HTML, CSS, Bootstrap, jQuery, Django.</p>
 			</div>
 		</div>
 		<br>
@@ -286,36 +289,19 @@
 				<p style="font-weight: bold;">OTHERS</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Git, Perforce, PostgresDB</p>
-			</div>
-		</div>
-		<br>
-		<!-- PROJECTS -->
-		<div class="row">
-			<div class="col-xs-12 subtitle">
-				<h2><span class="glyphicon glyphicon-tags"></span> PROJECTS</h2>
-				<br><br>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">COLLEGE INQUIRY CHATBOT</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-				<p>This is the project I did with persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
+				<p>Git, Perforce, Linux, PostgresDB</p>
 			</div>
 		</div>
 		<br>
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">RAILWAY TICKET BOOKING AUTOMATION</p>
+				<p style="font-weight: bold;">VMware Product Knowledge</p>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where you need to be very fast to get a ticket, this automation can do the work for you much faster and give you an edge that will increase the chances of getting the taktal ticket.</p>
+				<p>vCenter, ESXi</p>
 			</div>
 		</div>
-		<br><br>
+		<br>
 
 		<!-- INTERPERSONAL SKILLS -->
 		<div class="row">
