update work experience

--- a/index.html
+++ b/index.html
@@ -165,11 +165,10 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
 				<h1>VMware, Bangalore</h1>
-	        	<h4>Member of Technical Staff</h4>
+	        	<h4>Member of Technical Staff I</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Working with the vCenterLifecycle team on the development of the ‘vCenter Server Converge tool’. Currently working on making the REST API for the tool integrated with VMware’s VMODL framework and
-make it available as vSphere API and also release in the form of public API. Responsible for the end to end development of the feature.</p>
+				<p>Working on the development of next version of vCenter External to Embedded Convergence tool</p>
 			</div>
 		</div>
 		<br><br>
@@ -180,8 +179,7 @@ make it available as vSphere API and also release in the form of public API. Res
 	        	<h4>R&D Intern</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
-				<p>Worked with the vCenterLifecycle team on the development of the ‘vCenter Server Converge tool’. Successfully delivered the CLI version of the tool with vSphere 6.7U1 release. Specifically, responsible for the research to make the tool work on load balancer setup.
-</p>
+				<p>Developed the vCenter External to Embedded Convergence tool that converges a vCenter Server having an external PSC (Platform Services Controller) deployment model to an embedded PSC deployment model at runtime.</p>
 			</div>
 		</div>
 		<br><br>
