--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>VMware, Bangalore</h1>
-	        	<h4>Member of Technical Staff I</h4>
+				<h1>Member of Technical Staff I</h1>
+	        	<h4>VMware, Bangalore</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Working on the development of next version of vCenter External to Embedded Convergence tool</p>
@@ -175,8 +175,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>VMware, Bangalore</h1>
-	        	<h4>R&D Intern</h4>
+				<h1>R&D Intern</h1>
+	        	<h4>VMware, Bangalore</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Developed the vCenter External to Embedded Convergence tool that converges a vCenter Server having an external PSC (Platform Services Controller) deployment model to an embedded PSC deployment model at runtime.</p>
@@ -186,8 +186,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>Persistent Systems, Nagpur.</h1>
-	        	<h4>Project Intern</h4>
+				<h1>Project Intern</h1>
+	        	<h4>Persistent Systems, Nagpur</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Built a web based chatbot to answer FAQs about colleges in Nagpur such as placements and admission related questions. Scraped the websites of these colleges to populate the database.</p>
@@ -197,8 +197,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>Anand Engineering and Consultancy Services</h1>
-	        	<h4>Summer Intern</h4>
+				<h1>Summer Intern</h1>
+	        	<h4>Anand Engineering and Consultancy Services</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Interned under the Government of India’s RGSTC-TIFAC-MSME internship program. Built a real-time monitoring system for mining machines to reduce the downtime.
@@ -219,8 +219,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>Ramdeobaba College of Engineering, Nagpur</h1>
-	        	<h4>Bachelor of Engineerng in Information Techonlogy.</h4>
+				<h1>Bachelor of Engineerng in Information Techonlogy</h1>
+	        	<h4>Ramdeobaba College of Engineering, Nagpur</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>This was in real terms the turning point of my life. I came in as an academically average student, but full of enthusiasm and aspirations. I was interested in computers since childhood and wanted to master it. In college I got to learn a lot. I learned to code and many more aspects of computer science. The best part was undoubtedly the hostel life. I had great life experiences, met nice people, made awesome friends, I got to explore myself, participated in lots of extra curricular activities and had great fun. I came out as a confident, independent and skilled person.</p>
@@ -229,8 +229,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>Padhye Sir's Akash Education, Akola</h1>
-	        	<h4>Engineering entrance coaching</h4>
+				<h1>Engineering entrance coaching</h1>
+	        	<h4>Padhye Sir's Akash Education, Akola</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Living far from parents for the first time in life, studying with a bunch of very intelligent students, the real competition for success begun here. The competition to clear the entrance and get into a prestigious engineering college. I fall behind the race, I didn't study, I wasted the precious time, but learnt a lesson. This time tought me the importance of hard work.</p>
@@ -239,8 +239,8 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
-				<h1>Dinbai High School, Digras</h1>
-            	<h4>Schooling</h4>
+				<h1>Schooling</h1>
+            	<h4>Dinbai High School, Digras</h4>
 			</div>
 			<div class="col-xs-12 col-md-9">
 				<p>Living with family, not having any responsibility, fully enjoying childhood, school is just unforgetable. </p>
