--- a/index.html
+++ b/index.html
@@ -262,51 +262,20 @@
 				<h2><span class="glyphicon glyphicon-wrench"></span> TECHNICAL SKILLS</h2>
 				<br><br>
 			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">PROGRAMMING LANGUAGES</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-				<p>Python, Java, C, SQL.</p>
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">WEB DEVELOPMENT</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-				<p>HTML, CSS, Bootstrap, jQuery, Django.</p>
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">OTHERS</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-				<p>Git, Perforce, Linux, PostgresDB</p>
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-				<p style="font-weight: bold;">VMware Product Knowledge</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-				<p>vCenter, ESXi</p>
+			<div class="col-xs-12">
+				<ul class="list-unstyled">
+					<li><span class="glyphicon glyphicon-menu-right"></span> Python, Java, C, SQL.</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> HTML, CSS, Bootstrap, jQuery, Django.</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> Git, Perforce, Linux, Virtualization, PostgresDB.</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> vSphere.</li>
+				</ul>
 			</div>
 		</div>
 		<br>
 
 		<!-- INTERPERSONAL SKILLS -->
 		<div class="row">
-			<div class="col-xs-12 subtitle">
-				<h2><span class="glyphicon glyphicon-user"></span> INTERPERSONAL SKILLS</h2>
-				<br><br>
-			</div>
+
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
