--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@
 						<li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank, Inter-Collegiate Debate Competition, organized by Tirpude College of Management, Nagpur. February 3rd, 2017.</li>
 		                <br>
 		                <li><span class="glyphicon glyphicon-pushpin"></span> 1st Rank, Inter-Collegiate Extempore Competition, organized by Tirpude College of Management, Nagpur. February 3rd, 2017.</li>
+						<br>
+		                <li><span class="glyphicon glyphicon-pushpin"></span>Best Speaker, Impromptu Speech a.k.a Table Topics at IBC Titans Toastmasters Club, Oracle Corporation, Bangalore. February 14th, 2019</li>
+						<br>
+		                <li><span class="glyphicon glyphicon-pushpin"></span>3rd Rank, Impromptu Speech a.k.a Table Topics at Toastmasters Zonal Level Contest organized at IIM, Bangalore. February 16th, 2019</li>
 		                <br>
 		                <li><span class="glyphicon glyphicon-pushpin"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
 		                <br>
