--- a/index.html
+++ b/index.html
@@ -207,7 +207,11 @@
 				</ul>
 
 				<ul class="nes-list">
-					<li> Dynamically switching between synchronous and asyncronous communication channels (Filed)</li>
+					<li>Dynamically switching between synchronous and asyncronous communication channels (Filed)</li>
+				</ul>
+
+				<ul class="nes-list">
+					<li>Opportunistic hardening of files to remediate security threats posed by malicious applications (Filed)</li>
 				</ul>
 			</div>
 		</div>
@@ -227,7 +231,7 @@
 				<ul class="nes-list">
 					<li> 1 patent granted by US Patent and Trademark office.</li>
 					<br>
-					<li> 1 patent currently filed and awaiting verdict.</li>
+					<li> 2 patents currently filed and awaiting verdict.</li>
 					<br>
 					<li> 2 x Winner of VMware Global Hackathon.</li>
 					<br>
