Update key achievements

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<ul class="nes-list">
 							<li> 2 x Winner of VMware Global Hackathon.</li>
 							<br>
-							<li> 3 x Accepted at VMware Research & Development Innovation Offsite which has an acceptance rate of ~10%.</li>
+							<li> 4 x Accepted at VMware Research & Development Innovation Offsite which has an acceptance rate of ~10%.</li>
 							<br>
 							<li> 2 x Runner up at VMware Site Level Hackathon.</li>
 							<br>
@@ -107,7 +107,7 @@
 							<br>
 							<li> 1 patent granted by the US PTO</li>
 							<br>
-							<li> 1 patent filed, awaiting the verdict.</li>
+							<li> 2 patents filed, awaiting the verdict.</li>
 							<br>
 						</ul>
 					</div>
