Update patent info

--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
 							<br>
 							<li> Accepted at VMware xLabs program, VMware's internal incubator that fast-tracks and nurtures innovative off-roadmap ideas.</li>
 							<br>
-							<li> 1 patent granted by the US PTO</li>
-							<br>
-							<li> 2 patents filed, awaiting the verdict.</li>
+							<li> 9 US Patents (1 granted; 8 pending)</li>
 							<br>
 						</ul>
 					</div>
@@ -204,32 +202,6 @@
 		</div>
 		<br><br>
 
-		<!-- PATENT(S) -->
-		<div class="row">
-			<div class="col-xs-12">
-				<button type="button" class="nes-btn is-primary title">
-					PATENT(S)
-				</button>
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<div class="col-xs-12 lists">
-				<ul class="nes-list">
-					<li>System and method for embedding infrastructure security services into management nodes. (Granted)</li>
-				</ul>
-
-				<ul class="nes-list">
-					<li>Dynamically switching between synchronous and asyncronous communication channels (Filed)</li>
-				</ul>
-
-				<ul class="nes-list">
-					<li>Opportunistic hardening of files to remediate security threats posed by malicious applications (Filed)</li>
-				</ul>
-			</div>
-		</div>
-		<br><br>
-
 		<!-- TECHNICAL ACHIEVEMENTS -->
 		<div class="row">
 			<div class="col-xs-12">
@@ -242,9 +214,7 @@
 		<div class="row">
 			<div class="col-xs-12 lists">
 				<ul class="nes-list">
-					<li> 1 patent granted by US Patent and Trademark office.</li>
-					<br>
-					<li> 2 patents currently filed and awaiting verdict.</li>
+					<li> 9 US Patents (1 granted; 8 pending)</li>
 					<br>
 					<li> 2 x Winner of VMware Global Hackathon.</li>
 					<br>
