Update new job at Cloaked

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<div class="row">
 					<div class="col-xs-12" id="name_tag">
 						<h1>Raunak Singwi</h1>
-						<h4 class="nes-text is-success">Senior Member of Technical Staff @Salesforce</h4>
+						<h4 class="nes-text is-success">Senior Software Engineer at Cloaked</h4>
 						<br><br>
 					</div>
 
@@ -134,13 +134,27 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-md-3">
+				<h3>Senior Software Engineer</h1>
+				<h4 class="nes-text is-success">Cloaked</h4>
+				<br>
+			</div>
+			<div class="col-xs-12 col-md-9 lists">
+			<ul class="nes-list">
+					<li>Building the future of consumer privacy. [Python, Django, Go]</li>
+			</ul>
+			</div>
+		</div>
+		<br><br>
+
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
 				<h3>Senior Member of Technical Staff</h1>
 				<h4 class="nes-text is-success">Salesforce</h4>
 				<br>
 			</div>
 			<div class="col-xs-12 col-md-9 lists">
 			<ul class="nes-list">
-					<li>Working on the development of a monitoring platform for running synthetic emulations of services to monitor availability and correctness. [Java]</li>
+					<li>Worked on the development of a monitoring platform for running synthetic tests. The platform ran 200M tests per day at the time I worked on it. [Java]</li>
 			</ul>
 			</div>
 		</div>
