--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<br>
 						<p>Key Achievements:</p>
 						<ul class="nes-list">
-							<li> 12 US Patents (5 granted; 7 pending)</li>
+							<li> 12 US Patents (10 published; 2 pending)</li>
 							<br>
 							<li> 2 x Winner of VMware Global Hackathon.</li>
 							<br>
