Fix patent count

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <section class="row">
             <div class="col-xs-12 lists">
                 <ul class="nes-list">
-                    <li>12 US Patents (5 granted; 7 pending)</li>
+                    <li>12 US Patents (10 published; 2 pending)</li>
                     <li>2 x Winner of VMware Global Hackathon.</li>
                     <li>2 x Runner-up, VMware Palo Alto Hackathon.</li>
                     <li>4 x Accepted at VMware Research & Development Innovation Offsite having ~10% acceptance rate.</li>
